<resources>
    <string name="app_name">Zinia</string>
    <string name="nightmode_title">Nightmode</string>
    <string name="devices_activity_label">Devices</string>
    <string name="new_device_dialog_title">New Device</string>
    <string name="add_new_device_label">Add New Device</string>
    <string name="add_label">Add</string>
    <string name="cancel_label">Cancel</string>
    <string name="device_ip_label">Enter the IP Address of the device</string>
    <string name="device_name_label">Give it a name</string>
    <string name="title_activity_add_new_device">AddNewDeviceActivity</string>
    <string name="new_device_tab_text_1">Search</string>
    <string name="new_device_tab_text_2">Manual</string>
    <string name="ip_address_hint">eg. 192.168.178.XX</string>
    <string name="new_device_name_hint">eg. Desktop Lights</string>
    <string name="save_device_button_label">Save Device</string>
    <string name="ip_allowed_digits" translatable="false">0123456789.</string>
    <string name="new_device_num_leds_label">How many LEDs has the device?</string>
    <string name="new_device_num_leds_hint" translatable="false">1-9999</string>
    <string name="delete_device_title">Delete Device</string>
    <string name="delete_text">Are you sure you want to delete %1$s?</string>
    <string name="delete_label">Delete</string>
    <string name="ip_address_label" translatable="false">IP: %1$s</string>
    <string name="enter_name_label">Enter Name</string>
    <string name="please_enter_name_error">Please enter a name.</string>
    <string name="no_devices_found_text">Couldn\'t find any devices.</string>
    <string name="navigation_devices_label">Devices</string>
    <string name="navigation_moods_label">Moods</string>
    <string name="edit_label">Edit</string>
    <string name="mood_editor_activity_label">Mood Editor</string>
    <string name="name_label">Name</string>
    <string name="mood_disable_unused_devices">Turn off unused devices</string>
    <string name="done_label">Done</string>
    <string name="change_label">Change</string>
    <string name="add_device_label">Add Device</string>
    <string name="on_press_back_close_app">Press Back again to exit the Application.</string>
    <string name="choose_device_label">Choose Device</string>
    <string name="mood_cannot_be_saved">Please enter a name and add at least one device.</string>
    <string name="pick_moodtask_dialog_title">Action for %1$s</string>
    <string name="pick_color_label">Choose Color</string>
    <string name="remove_device_title">Remove Device</string>
    <string name="remove_device_message">Are you sure you want to remove %1$s from this Mood?</string>
    <string name="remove_label">Remove</string>
    <string name="navigation_shows_label">Shows</string>
    <string name="choose_show_type_label">What kind of show?</string>
    <string name="color_sequence_label">Color Sequence</string>
    <string name="color_sequence_editor_label">Color Sequence Editor</string>
    <string name="pick_preview_device_label">Device for preview</string>
    <string name="transition_speed_label">How fast should the transition be?</string>
    <string name="keep_color_label">How long should the color be kept?</string>
    <string name="time_in_seconds">%1$d.%2$ds</string>
    <string name="preview_label">Preview</string>
    <string name="save_label">Save</string>
    <string name="color_sequence_cannot_save">Please enter a name and add at least one color.</string>
    <string name="percent_one_decimal_label">%1$d.%2$d%%</string>
    <string name="delete_show_label">Delete Show</string>
    <string name="choose_show_label">Choose Show</string>
    <string name="is_device_rgbw_label">Are there 4 Color Channels (RGBW)?</string>
</resources>
