<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/DefaultTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/device_ip_label" />

        <de.hpled.zinia.StatusIndicatorView
            android:id="@+id/newDeviceIpStatus"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/newDeviceIpEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_address_hint"
        android:inputType="textPersonName" />

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/DefaultTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/device_name_label" />

    </LinearLayout>

    <EditText
        android:id="@+id/newDeviceNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_device_name_hint"
        android:inputType="textPersonName" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:text="@string/save_device_button_label"/>


</LinearLayout>