<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background"
    android:elevation="1dp"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".colorsequence.fragments.ColorSequenceEditorPrefsFragment">

    <EditText
        android:id="@+id/colorSeqEditorName"
        style="@style/TitleTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/name_label"
        android:inputType="textPersonName" />

    <TextView
        style="@style/DefaultTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/transition_speed_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/material_speed"
            android:tint="@color/colorTextSecondary" />

        <SeekBar
            android:id="@+id/colorSeqEditorSpeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="@integer/colorSeqSpeedMax" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/DefaultTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/keep_color_label" />

        <TextView
            android:id="@+id/colorSeqEditorKeepTime"
            style="@style/TitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_in_seconds"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/material_timer"
            android:tint="@color/colorTextSecondary" />

        <SeekBar
            android:id="@+id/colorSeqEditorKeep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="@integer/colorSeqKeepMax" />
    </LinearLayout>

</LinearLayout>